# serializer version: 1
# name: TestDCLConnectEndpointContract.test_connect_source_response_structure
  dict({
    'agents': list([
      'revops_pilot',
    ]),
    'ok': True,
    'source_mode': 'demo_files',
    'sources': list([
      'salesforce',
    ]),
  })
# ---
# name: TestDCLSourceSchemasContract.test_source_schemas_empty_structure
  dict({
  })
# ---
# name: TestDCLSourceSchemasContract.test_source_schemas_with_sources_structure
  dict({
    'hubspot': dict({
      'Deals': dict({
        'path': '/home/runner/workspace/app/dcl_engine/schemas/hubspot/Deals.csv',
        'samples': list([
          dict({
            'amount': 388088,
            'annual_contract_value': 388088,
            'arr': 388088,
            'close_date': '2025-08-31',
            'company_id': 'COMP-3475',
            'company_name': 'TechStart Inc',
            'competitors': 'Competitor B',
            'contract_term_months': 36,
            'created_date': '2025-07-24',
            'deal_currency': 'USD',
            'deal_description': 'Enterprise software deal for CloudBridge',
            'deal_id': 'DEAL-81192',
            'deal_name': 'Enterprise Hub - New Business Q2 2024',
            'deal_owner': 'Mike Davis',
            'deal_owner_email': 'sales6@company.com',
            'deal_stage': 'Negotiation',
            'deal_type': 'New Business',
            'expected_close_date': '2025-08-31',
            'forecast_category': 'Closed',
            'industry': 'Finance',
            'last_modified_date': '2025-08-05',
            'lead_source': 'Inbound',
            'mrr': 32340,
            'next_step': 'Final approval',
            'num_decision_makers': 4,
            'probability': 75,
            'renewal_date': '2026-08-31',
          }),
          dict({
            'amount': 401328,
            'annual_contract_value': 401328,
            'arr': 401328,
            'close_date': '2025-10-02',
            'company_id': 'COMP-7752',
            'company_name': 'Acme Corp',
            'competitors': 'Multiple',
            'contract_term_months': 36,
            'created_date': '2025-07-27',
            'deal_currency': 'USD',
            'deal_description': 'Enterprise software deal for DataFlow Systems',
            'deal_id': 'DEAL-98896',
            'deal_name': 'FutureTech - Renewal Q3 2024',
            'deal_owner': 'John Johnson',
            'deal_owner_email': 'sales9@company.com',
            'deal_stage': 'Closed Lost',
            'deal_type': 'New Business',
            'expected_close_date': '2025-10-02',
            'forecast_category': 'Pipeline',
            'industry': 'Retail',
            'last_modified_date': '2025-08-19',
            'lead_source': 'Outbound',
            'mrr': 33444,
            'next_step': 'Schedule demo',
            'num_decision_makers': 1,
            'probability': 75,
            'renewal_date': '2026-10-02',
          }),
          dict({
            'amount': 223057,
            'annual_contract_value': 223057,
            'arr': 223057,
            'close_date': '2025-08-11',
            'company_id': 'COMP-4733',
            'company_name': 'CloudBridge',
            'competitors': 'Competitor B',
            'contract_term_months': 24,
            'created_date': '2025-06-09',
            'deal_currency': 'USD',
            'deal_description': 'Enterprise software deal for Innovate LLC',
            'deal_id': 'DEAL-58387',
            'deal_name': 'Enterprise Hub - New Business Q4 2024',
            'deal_owner': 'David Johnson',
            'deal_owner_email': 'sales10@company.com',
            'deal_stage': 'Proposal Sent',
            'deal_type': 'Cross-sell',
            'expected_close_date': '2025-08-11',
            'forecast_category': 'Pipeline',
            'industry': 'Technology',
            'last_modified_date': '2025-06-22',
            'lead_source': 'Referral',
            'mrr': 18588,
            'next_step': 'Schedule demo',
            'num_decision_makers': 4,
            'probability': 100,
            'renewal_date': '2026-08-11',
          }),
          dict({
            'amount': 323862,
            'annual_contract_value': 323862,
            'arr': 323862,
            'close_date': '2025-10-19',
            'company_id': 'COMP-8447',
            'company_name': 'SmartOps Co',
            'competitors': 'Competitor B',
            'contract_term_months': 24,
            'created_date': '2025-09-13',
            'deal_currency': 'USD',
            'deal_description': 'Enterprise software deal for Innovate LLC',
            'deal_id': 'DEAL-28827',
            'deal_name': 'Enterprise Hub - Cross-sell Q1 2024',
            'deal_owner': 'John Brown',
            'deal_owner_email': 'sales2@company.com',
            'deal_stage': 'Qualified',
            'deal_type': 'Upsell',
            'expected_close_date': '2025-10-19',
            'forecast_category': 'Pipeline',
            'industry': 'Retail',
            'last_modified_date': '2025-10-12',
            'lead_source': 'Partner',
            'mrr': 26988,
            'next_step': 'Schedule demo',
            'num_decision_makers': 1,
            'probability': 100,
            'renewal_date': '2026-10-19',
          }),
          dict({
            'amount': 410605,
            'annual_contract_value': 410605,
            'arr': 410605,
            'close_date': '2025-10-27',
            'company_id': 'COMP-4012',
            'company_name': 'NextGen Analytics',
            'competitors': 'Competitor A',
            'contract_term_months': 24,
            'created_date': '2025-08-05',
            'deal_currency': 'USD',
            'deal_description': 'Enterprise software deal for Enterprise Hub',
            'deal_id': 'DEAL-77659',
            'deal_name': 'CloudBridge - Renewal Q1 2024',
            'deal_owner': 'David Brown',
            'deal_owner_email': 'sales9@company.com',
            'deal_stage': 'Qualified',
            'deal_type': 'Renewal',
            'expected_close_date': '2025-10-27',
            'forecast_category': 'Commit',
            'industry': 'Healthcare',
            'last_modified_date': '2025-08-07',
            'lead_source': 'Event',
            'mrr': 34217,
            'next_step': 'Final approval',
            'num_decision_makers': 5,
            'probability': 25,
            'renewal_date': '2026-10-27',
          }),
          dict({
            'amount': 158072,
            'annual_contract_value': 158072,
            'arr': 158072,
            'close_date': '2025-06-19',
            'company_id': 'COMP-4738',
            'company_name': 'DataFlow Systems',
            'competitors': 'Competitor A',
            'contract_term_months': 12,
            'created_date': '2025-05-03',
            'deal_currency': 'USD',
            'deal_description': 'Enterprise software deal for Acme Corp',
            'deal_id': 'DEAL-90277',
            'deal_name': 'Global Solutions - New Business Q1 2024',
            'deal_owner': 'Sarah Johnson',
            'deal_owner_email': 'sales9@company.com',
            'deal_stage': 'Closed Lost',
            'deal_type': 'Cross-sell',
            'expected_close_date': '2025-06-19',
            'forecast_category': 'Pipeline',
            'industry': 'Manufacturing',
            'last_modified_date': '2025-05-18',
            'lead_source': 'Inbound',
            'mrr': 13172,
            'next_step': 'Send proposal',
            'num_decision_makers': 1,
            'probability': 10,
            'renewal_date': '2026-06-19',
          }),
          dict({
            'amount': 463589,
            'annual_contract_value': 463589,
            'arr': 463589,
            'close_date': '2025-10-23',
            'company_id': 'COMP-5838',
            'company_name': 'SmartOps Co',
            'competitors': None,
            'contract_term_months': 24,
            'created_date': '2025-08-07',
            'deal_currency': 'USD',
            'deal_description': 'Enterprise software deal for Global Solutions',
            'deal_id': 'DEAL-75982',
            'deal_name': 'SyncFlow Inc - Renewal Q3 2024',
            'deal_owner': 'John Smith',
            'deal_owner_email': 'sales6@company.com',
            'deal_stage': 'Proposal Sent',
            'deal_type': 'New Business',
            'expected_close_date': '2025-10-23',
            'forecast_category': 'Best Case',
            'industry': 'Retail',
            'last_modified_date': '2025-08-20',
            'lead_source': 'Referral',
            'mrr': 38632,
            'next_step': 'Onboarding',
            'num_decision_makers': 1,
            'probability': 75,
            'renewal_date': '2026-10-23',
          }),
          dict({
            'amount': 55215,
            'annual_contract_value': 55215,
            'arr': 55215,
            'close_date': '2025-09-09',
            'company_id': 'COMP-6150',
            'company_name': 'NextGen Analytics',
            'competitors': 'Multiple',
            'contract_term_months': 36,
            'created_date': '2025-07-27',
            'deal_currency': 'USD',
            'deal_description': 'Enterprise software deal for Digital Dynamics',
            'deal_id': 'DEAL-70458',
            'deal_name': 'SyncFlow Inc - Cross-sell Q4 2024',
            'deal_owner': 'Sarah Johnson',
            'deal_owner_email': 'sales5@company.com',
            'deal_stage': 'Prospecting',
            'deal_type': 'Upsell',
            'expected_close_date': '2025-09-09',
            'forecast_category': 'Best Case',
            'industry': 'Retail',
            'last_modified_date': '2025-08-26',
            'lead_source': 'Inbound',
            'mrr': 4601,
            'next_step': 'Send proposal',
            'num_decision_makers': 1,
            'probability': 10,
            'renewal_date': '2026-09-09',
          }),
        ]),
        'schema': dict({
          'amount': 'integer',
          'annual_contract_value': 'integer',
          'arr': 'integer',
          'close_date': 'datetime',
          'company_id': 'datetime',
          'company_name': 'datetime',
          'competitors': 'datetime',
          'contract_term_months': 'integer',
          'created_date': 'datetime',
          'deal_currency': 'datetime',
          'deal_description': 'datetime',
          'deal_id': 'datetime',
          'deal_name': 'datetime',
          'deal_owner': 'datetime',
          'deal_owner_email': 'datetime',
          'deal_stage': 'datetime',
          'deal_type': 'datetime',
          'expected_close_date': 'datetime',
          'forecast_category': 'datetime',
          'industry': 'datetime',
          'last_modified_date': 'datetime',
          'lead_source': 'datetime',
          'mrr': 'integer',
          'next_step': 'datetime',
          'num_decision_makers': 'integer',
          'probability': 'integer',
          'renewal_date': 'datetime',
        }),
      }),
    }),
    'salesforce': dict({
      'Account': dict({
        'path': '/home/runner/workspace/app/dcl_engine/schemas/salesforce/Account.csv',
        'samples': list([
          dict({
            'AnnualRevenue': 12000000,
            'CreatedDate': '2024-01-10',
            'Id': 'SF-A001',
            'Industry': 'Software',
            'Name': 'Innovate Labs',
          }),
          dict({
            'AnnualRevenue': 28000000,
            'CreatedDate': '2024-01-25',
            'Id': 'SF-A002',
            'Industry': 'Construction',
            'Name': 'BuildCo',
          }),
          dict({
            'AnnualRevenue': 19000000,
            'CreatedDate': '2024-02-08',
            'Id': 'SF-A003',
            'Industry': 'Media',
            'Name': 'MediaStream Inc',
          }),
          dict({
            'AnnualRevenue': 9500000,
            'CreatedDate': '2024-02-20',
            'Id': 'SF-A004',
            'Industry': 'Education',
            'Name': 'EduTech Solutions',
          }),
        ]),
        'schema': dict({
          'AnnualRevenue': 'integer',
          'CreatedDate': 'datetime',
          'Id': 'datetime',
          'Industry': 'datetime',
          'Name': 'datetime',
        }),
      }),
      'Opportunity': dict({
        'path': '/home/runner/workspace/app/dcl_engine/schemas/salesforce/Opportunity.csv',
        'samples': list([
          dict({
            'AccountId': 'SF-A001',
            'Amount': 380000,
            'CloseDate': '2024-04-10',
            'Id': 'SF-O001',
            'Name': 'Enterprise License',
            'StageName': 'Qualification',
          }),
          dict({
            'AccountId': 'SF-A002',
            'Amount': 670000,
            'CloseDate': '2024-05-15',
            'Id': 'SF-O002',
            'Name': 'Construction Suite',
            'StageName': 'Closed Won',
          }),
          dict({
            'AccountId': 'SF-A003',
            'Amount': 540000,
            'CloseDate': '2024-04-25',
            'Id': 'SF-O003',
            'Name': 'Media Platform',
            'StageName': 'Negotiation',
          }),
        ]),
        'schema': dict({
          'AccountId': 'datetime',
          'Amount': 'integer',
          'CloseDate': 'datetime',
          'Id': 'datetime',
          'Name': 'datetime',
          'StageName': 'datetime',
        }),
      }),
    }),
  })
# ---
# name: TestDCLStateContract.test_empty_graph_state_structure
  dict({
    'agent_consumption': dict({
      'finops_pilot': list([
        'aws_resources',
        'cost_reports',
      ]),
      'revops_pilot': list([
        'account',
        'opportunity',
        'health',
        'usage',
      ]),
    }),
    'auth_enabled': True,
    'auto_ingest_unmapped': False,
    'confidence': None,
    'dev_mode': False,
    'edges': list([
    ]),
    'entity_sources': dict({
    }),
    'events': list([
    ]),
    'llm': dict({
      'calls': 7,
      'calls_saved': 0,
      'tokens': 81855,
    }),
    'metadata': dict({
      'agent_consumption': dict({
        'finops_pilot': list([
          'aws_resources',
          'cost_reports',
        ]),
        'revops_pilot': list([
          'account',
          'opportunity',
          'health',
          'usage',
        ]),
      }),
      'auth_enabled': True,
      'auto_ingest_unmapped': False,
      'dev_mode': False,
      'events': list([
      ]),
      'llm': dict({
        'calls': 7,
        'calls_saved': 0,
        'tokens': 81855,
      }),
      'rag': dict({
        'last_retrieval_count': 0,
        'mappings_retrieved': 0,
        'retrievals': list([
        ]),
        'total_mappings': 14925,
      }),
      'source_mode': 'demo_files',
      'timeline': list([
      ]),
    }),
    'nodes': list([
    ]),
    'rag': dict({
      'last_retrieval_count': 0,
      'mappings_retrieved': 0,
      'retrievals': list([
      ]),
      'total_mappings': 14925,
    }),
    'selected_agents': list([
    ]),
    'source_mode': 'demo_files',
    'sources_added': list([
    ]),
    'timeline': list([
    ]),
  })
# ---
# name: TestDCLStateContract.test_graph_state_metadata_fields
  dict({
    'agent_consumption': dict({
      'finops_pilot': list([
        'aws_resources',
        'cost_reports',
      ]),
      'revops_pilot': list([
        'account',
        'opportunity',
        'health',
        'usage',
      ]),
    }),
    'auth_enabled': True,
    'auto_ingest_unmapped': False,
    'confidence': 0.8171428571428571,
    'dev_mode': False,
    'edges': list([
      dict({
        'edgeType': 'dataflow',
        'field_mappings': list([
          dict({
            'confidence': 0.85,
            'onto_field': 'account_id',
            'source': 'Id',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'account_name',
            'source': 'Name',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'revenue',
            'source': 'AnnualRevenue',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'industry',
            'source': 'Industry',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'created_date',
            'source': 'CreatedDate',
          }),
        ]),
        'label': 'salesforce_Account → account',
        'source': 'src_salesforce_Account',
        'target': 'dcl_account',
        'type': 'mapping',
      }),
      dict({
        'edgeType': 'dataflow',
        'field_mappings': list([
          dict({
            'confidence': 0.85,
            'onto_field': 'account_id',
            'source': 'Id',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'account_name',
            'source': 'Name',
          }),
        ]),
        'label': 'salesforce_Opportunity → account',
        'source': 'src_salesforce_Opportunity',
        'target': 'dcl_account',
        'type': 'mapping',
      }),
      dict({
        'edgeType': 'dataflow',
        'field_mappings': list([
          dict({
            'confidence': 0.82,
            'onto_field': 'amount',
            'source': 'Amount',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'close_date',
            'source': 'CloseDate',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'stage',
            'source': 'StageName',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'account_id',
            'source': 'Id',
          }),
        ]),
        'label': 'salesforce_Opportunity → opportunity',
        'source': 'src_salesforce_Opportunity',
        'target': 'dcl_opportunity',
        'type': 'mapping',
      }),
      dict({
        'edgeType': 'hierarchy',
        'source': 'sys_salesforce',
        'target': 'src_salesforce_Account',
        'value': 1,
      }),
      dict({
        'edgeType': 'hierarchy',
        'source': 'sys_salesforce',
        'target': 'src_salesforce_Opportunity',
        'value': 1,
      }),
      dict({
        'edgeType': 'dataflow',
        'entity_fields': list([
          'account_id',
          'account_name',
          'industry',
          'revenue',
          'employee_count',
          'created_date',
        ]),
        'entity_name': 'account',
        'label': '',
        'source': 'dcl_account',
        'target': 'agent_revops_pilot',
        'type': 'consumption',
      }),
      dict({
        'edgeType': 'dataflow',
        'entity_fields': list([
          'opportunity_id',
          'opportunity_name',
          'account_id',
          'stage',
          'amount',
          'close_date',
          'probability',
        ]),
        'entity_name': 'opportunity',
        'label': '',
        'source': 'dcl_opportunity',
        'target': 'agent_revops_pilot',
        'type': 'consumption',
      }),
      dict({
        'edgeType': 'dataflow',
        'field_mappings': list([
          dict({
            'confidence': 0.85,
            'onto_field': 'account_name',
            'source': 'deal_name',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'industry',
            'source': 'industry',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'created_date',
            'source': 'created_date',
          }),
        ]),
        'label': 'hubspot_Deals → account',
        'source': 'src_hubspot_Deals',
        'target': 'dcl_account',
        'type': 'mapping',
      }),
      dict({
        'edgeType': 'dataflow',
        'field_mappings': list([
          dict({
            'confidence': 0.82,
            'onto_field': 'amount',
            'source': 'amount',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'close_date',
            'source': 'close_date',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'stage',
            'source': 'deal_stage',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'probability',
            'source': 'probability',
          }),
        ]),
        'label': 'hubspot_Deals → opportunity',
        'source': 'src_hubspot_Deals',
        'target': 'dcl_opportunity',
        'type': 'mapping',
      }),
      dict({
        'edgeType': 'hierarchy',
        'source': 'sys_hubspot',
        'target': 'src_hubspot_Deals',
        'value': 1,
      }),
    ]),
    'entity_sources': dict({
      'account': list([
        'salesforce',
        'hubspot',
      ]),
      'opportunity': list([
        'salesforce',
        'hubspot',
      ]),
    }),
    'events': list([
      '🔄 DCL state cleared for tenant e861c6f7-6738-48a4-af87-78b41cb7b53d (dev_mode preserved). Ready for new connection.',
    ]),
    'llm': dict({
      'calls': 7,
      'calls_saved': 0,
      'tokens': 81855,
    }),
    'metadata': dict({
      'agent_consumption': dict({
        'finops_pilot': list([
          'aws_resources',
          'cost_reports',
        ]),
        'revops_pilot': list([
          'account',
          'opportunity',
          'health',
          'usage',
        ]),
      }),
      'auth_enabled': True,
      'auto_ingest_unmapped': False,
      'dev_mode': False,
      'events': list([
        '🔄 DCL state cleared for tenant e861c6f7-6738-48a4-af87-78b41cb7b53d (dev_mode preserved). Ready for new connection.',
      ]),
      'llm': dict({
        'calls': 7,
        'calls_saved': 0,
        'tokens': 81855,
      }),
      'rag': dict({
        'last_retrieval_count': 13,
        'mappings_retrieved': 13,
        'retrievals': list([
          dict({
            'ontology_entity': 'account.revenue',
            'similarity': 0.897,
            'source_field': 'annual_contract_value',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.probability',
            'similarity': 0.893,
            'source_field': 'probability',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.close_date',
            'similarity': 0.891,
            'source_field': 'close_date',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.stage',
            'similarity': 0.89,
            'source_field': 'deal_stage',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.opportunity_id',
            'similarity': 0.888,
            'source_field': 'deal_id',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'account.created_date',
            'similarity': 0.887,
            'source_field': 'created_date',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.opportunity_name',
            'similarity': 0.886,
            'source_field': 'deal_name',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.amount',
            'similarity': 0.878,
            'source_field': 'amount',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.account_id',
            'similarity': 0.877,
            'source_field': 'company_id',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'account.revenue',
            'similarity': 0.873,
            'source_field': 'mrr',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'account.industry',
            'similarity': 0.872,
            'source_field': 'industry',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'account.account_name',
            'similarity': 0.871,
            'source_field': 'company_name',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'account.revenue',
            'similarity': 0.865,
            'source_field': 'arr',
            'source_system': 'hubspot',
          }),
        ]),
        'total_mappings': 14925,
      }),
      'source_mode': 'demo_files',
      'timeline': list([
        '🔄 DCL state cleared for tenant e861c6f7-6738-48a4-af87-78b41cb7b53d (dev_mode preserved). Ready for new connection.',
      ]),
    }),
    'nodes': list([
      dict({
        'id': 'dcl_account',
        'label': 'Account (Unified)',
        'type': 'ontology',
      }),
      dict({
        'id': 'dcl_opportunity',
        'label': 'Opportunity (Unified)',
        'type': 'ontology',
      }),
      dict({
        'id': 'sys_salesforce',
        'label': 'Salesforce',
        'type': 'source_parent',
      }),
      dict({
        'fields': list([
          'Id',
          'Name',
          'Industry',
          'AnnualRevenue',
          'CreatedDate',
        ]),
        'id': 'src_salesforce_Account',
        'label': 'Account (Salesforce)',
        'parentId': 'sys_salesforce',
        'sourceSystem': 'Salesforce',
        'type': 'source',
      }),
      dict({
        'fields': list([
          'Id',
          'AccountId',
          'Name',
          'Amount',
          'CloseDate',
          'StageName',
        ]),
        'id': 'src_salesforce_Opportunity',
        'label': 'Opportunity (Salesforce)',
        'parentId': 'sys_salesforce',
        'sourceSystem': 'Salesforce',
        'type': 'source',
      }),
      dict({
        'id': 'agent_revops_pilot',
        'label': 'RevOps Pilot',
        'type': 'agent',
      }),
      dict({
        'id': 'sys_hubspot',
        'label': 'Hubspot',
        'type': 'source_parent',
      }),
      dict({
        'fields': list([
          'deal_id',
          'deal_name',
          'amount',
          'close_date',
          'expected_close_date',
          'deal_stage',
          'deal_type',
          'probability',
          'deal_owner',
          'deal_owner_email',
          'company_name',
          'company_id',
          'industry',
          'lead_source',
          'created_date',
          'last_modified_date',
          'annual_contract_value',
          'deal_currency',
          'forecast_category',
          'next_step',
          'competitors',
          'num_decision_makers',
          'deal_description',
          'contract_term_months',
          'renewal_date',
          'mrr',
          'arr',
        ]),
        'id': 'src_hubspot_Deals',
        'label': 'Deals (Hubspot)',
        'parentId': 'sys_hubspot',
        'sourceSystem': 'Hubspot',
        'type': 'source',
      }),
    ]),
    'rag': dict({
      'last_retrieval_count': 13,
      'mappings_retrieved': 13,
      'retrievals': list([
        dict({
          'ontology_entity': 'account.revenue',
          'similarity': 0.897,
          'source_field': 'annual_contract_value',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.probability',
          'similarity': 0.893,
          'source_field': 'probability',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.close_date',
          'similarity': 0.891,
          'source_field': 'close_date',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.stage',
          'similarity': 0.89,
          'source_field': 'deal_stage',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.opportunity_id',
          'similarity': 0.888,
          'source_field': 'deal_id',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'account.created_date',
          'similarity': 0.887,
          'source_field': 'created_date',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.opportunity_name',
          'similarity': 0.886,
          'source_field': 'deal_name',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.amount',
          'similarity': 0.878,
          'source_field': 'amount',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.account_id',
          'similarity': 0.877,
          'source_field': 'company_id',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'account.revenue',
          'similarity': 0.873,
          'source_field': 'mrr',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'account.industry',
          'similarity': 0.872,
          'source_field': 'industry',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'account.account_name',
          'similarity': 0.871,
          'source_field': 'company_name',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'account.revenue',
          'similarity': 0.865,
          'source_field': 'arr',
          'source_system': 'hubspot',
        }),
      ]),
      'total_mappings': 14925,
    }),
    'selected_agents': list([
      'revops_pilot',
    ]),
    'source_mode': 'demo_files',
    'sources_added': list([
      'salesforce',
      'hubspot',
    ]),
    'timeline': list([
      '🔄 DCL state cleared for tenant e861c6f7-6738-48a4-af87-78b41cb7b53d (dev_mode preserved). Ready for new connection.',
    ]),
  })
# ---
# name: TestDCLStateContract.test_graph_state_with_sources_structure
  dict({
    'agent_consumption': dict({
      'finops_pilot': list([
        'aws_resources',
        'cost_reports',
      ]),
      'revops_pilot': list([
        'account',
        'opportunity',
        'health',
        'usage',
      ]),
    }),
    'auth_enabled': True,
    'auto_ingest_unmapped': False,
    'confidence': 0.8171428571428571,
    'dev_mode': False,
    'edges': list([
      dict({
        'edgeType': 'dataflow',
        'field_mappings': list([
          dict({
            'confidence': 0.85,
            'onto_field': 'account_id',
            'source': 'Id',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'account_name',
            'source': 'Name',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'revenue',
            'source': 'AnnualRevenue',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'industry',
            'source': 'Industry',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'created_date',
            'source': 'CreatedDate',
          }),
        ]),
        'label': 'salesforce_Account → account',
        'source': 'src_salesforce_Account',
        'target': 'dcl_account',
        'type': 'mapping',
      }),
      dict({
        'edgeType': 'dataflow',
        'field_mappings': list([
          dict({
            'confidence': 0.85,
            'onto_field': 'account_id',
            'source': 'Id',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'account_name',
            'source': 'Name',
          }),
        ]),
        'label': 'salesforce_Opportunity → account',
        'source': 'src_salesforce_Opportunity',
        'target': 'dcl_account',
        'type': 'mapping',
      }),
      dict({
        'edgeType': 'dataflow',
        'field_mappings': list([
          dict({
            'confidence': 0.82,
            'onto_field': 'amount',
            'source': 'Amount',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'close_date',
            'source': 'CloseDate',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'stage',
            'source': 'StageName',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'account_id',
            'source': 'Id',
          }),
        ]),
        'label': 'salesforce_Opportunity → opportunity',
        'source': 'src_salesforce_Opportunity',
        'target': 'dcl_opportunity',
        'type': 'mapping',
      }),
      dict({
        'edgeType': 'hierarchy',
        'source': 'sys_salesforce',
        'target': 'src_salesforce_Account',
        'value': 1,
      }),
      dict({
        'edgeType': 'hierarchy',
        'source': 'sys_salesforce',
        'target': 'src_salesforce_Opportunity',
        'value': 1,
      }),
      dict({
        'edgeType': 'dataflow',
        'entity_fields': list([
          'account_id',
          'account_name',
          'industry',
          'revenue',
          'employee_count',
          'created_date',
        ]),
        'entity_name': 'account',
        'label': '',
        'source': 'dcl_account',
        'target': 'agent_revops_pilot',
        'type': 'consumption',
      }),
      dict({
        'edgeType': 'dataflow',
        'entity_fields': list([
          'opportunity_id',
          'opportunity_name',
          'account_id',
          'stage',
          'amount',
          'close_date',
          'probability',
        ]),
        'entity_name': 'opportunity',
        'label': '',
        'source': 'dcl_opportunity',
        'target': 'agent_revops_pilot',
        'type': 'consumption',
      }),
      dict({
        'edgeType': 'dataflow',
        'field_mappings': list([
          dict({
            'confidence': 0.85,
            'onto_field': 'account_name',
            'source': 'deal_name',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'industry',
            'source': 'industry',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'created_date',
            'source': 'created_date',
          }),
        ]),
        'label': 'hubspot_Deals → account',
        'source': 'src_hubspot_Deals',
        'target': 'dcl_account',
        'type': 'mapping',
      }),
      dict({
        'edgeType': 'dataflow',
        'field_mappings': list([
          dict({
            'confidence': 0.82,
            'onto_field': 'amount',
            'source': 'amount',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'close_date',
            'source': 'close_date',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'stage',
            'source': 'deal_stage',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'probability',
            'source': 'probability',
          }),
        ]),
        'label': 'hubspot_Deals → opportunity',
        'source': 'src_hubspot_Deals',
        'target': 'dcl_opportunity',
        'type': 'mapping',
      }),
      dict({
        'edgeType': 'hierarchy',
        'source': 'sys_hubspot',
        'target': 'src_hubspot_Deals',
        'value': 1,
      }),
    ]),
    'entity_sources': dict({
      'account': list([
        'salesforce',
        'hubspot',
      ]),
      'opportunity': list([
        'salesforce',
        'hubspot',
      ]),
    }),
    'events': list([
      '🔄 DCL state cleared for tenant 759066b4-d840-490d-9001-d3d18014c5da (dev_mode preserved). Ready for new connection.',
    ]),
    'llm': dict({
      'calls': 7,
      'calls_saved': 0,
      'tokens': 81855,
    }),
    'metadata': dict({
      'agent_consumption': dict({
        'finops_pilot': list([
          'aws_resources',
          'cost_reports',
        ]),
        'revops_pilot': list([
          'account',
          'opportunity',
          'health',
          'usage',
        ]),
      }),
      'auth_enabled': True,
      'auto_ingest_unmapped': False,
      'dev_mode': False,
      'events': list([
        '🔄 DCL state cleared for tenant 759066b4-d840-490d-9001-d3d18014c5da (dev_mode preserved). Ready for new connection.',
      ]),
      'llm': dict({
        'calls': 7,
        'calls_saved': 0,
        'tokens': 81855,
      }),
      'rag': dict({
        'last_retrieval_count': 13,
        'mappings_retrieved': 13,
        'retrievals': list([
          dict({
            'ontology_entity': 'account.revenue',
            'similarity': 0.897,
            'source_field': 'annual_contract_value',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.probability',
            'similarity': 0.893,
            'source_field': 'probability',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.close_date',
            'similarity': 0.891,
            'source_field': 'close_date',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.stage',
            'similarity': 0.89,
            'source_field': 'deal_stage',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.opportunity_id',
            'similarity': 0.888,
            'source_field': 'deal_id',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'account.created_date',
            'similarity': 0.887,
            'source_field': 'created_date',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.opportunity_name',
            'similarity': 0.886,
            'source_field': 'deal_name',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.amount',
            'similarity': 0.878,
            'source_field': 'amount',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.account_id',
            'similarity': 0.877,
            'source_field': 'company_id',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'account.revenue',
            'similarity': 0.873,
            'source_field': 'mrr',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'account.industry',
            'similarity': 0.872,
            'source_field': 'industry',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'account.account_name',
            'similarity': 0.871,
            'source_field': 'company_name',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'account.revenue',
            'similarity': 0.865,
            'source_field': 'arr',
            'source_system': 'hubspot',
          }),
        ]),
        'total_mappings': 14925,
      }),
      'source_mode': 'demo_files',
      'timeline': list([
        '🔄 DCL state cleared for tenant 759066b4-d840-490d-9001-d3d18014c5da (dev_mode preserved). Ready for new connection.',
      ]),
    }),
    'nodes': list([
      dict({
        'id': 'dcl_account',
        'label': 'Account (Unified)',
        'type': 'ontology',
      }),
      dict({
        'id': 'dcl_opportunity',
        'label': 'Opportunity (Unified)',
        'type': 'ontology',
      }),
      dict({
        'id': 'sys_salesforce',
        'label': 'Salesforce',
        'type': 'source_parent',
      }),
      dict({
        'fields': list([
          'Id',
          'Name',
          'Industry',
          'AnnualRevenue',
          'CreatedDate',
        ]),
        'id': 'src_salesforce_Account',
        'label': 'Account (Salesforce)',
        'parentId': 'sys_salesforce',
        'sourceSystem': 'Salesforce',
        'type': 'source',
      }),
      dict({
        'fields': list([
          'Id',
          'AccountId',
          'Name',
          'Amount',
          'CloseDate',
          'StageName',
        ]),
        'id': 'src_salesforce_Opportunity',
        'label': 'Opportunity (Salesforce)',
        'parentId': 'sys_salesforce',
        'sourceSystem': 'Salesforce',
        'type': 'source',
      }),
      dict({
        'id': 'agent_revops_pilot',
        'label': 'RevOps Pilot',
        'type': 'agent',
      }),
      dict({
        'id': 'sys_hubspot',
        'label': 'Hubspot',
        'type': 'source_parent',
      }),
      dict({
        'fields': list([
          'deal_id',
          'deal_name',
          'amount',
          'close_date',
          'expected_close_date',
          'deal_stage',
          'deal_type',
          'probability',
          'deal_owner',
          'deal_owner_email',
          'company_name',
          'company_id',
          'industry',
          'lead_source',
          'created_date',
          'last_modified_date',
          'annual_contract_value',
          'deal_currency',
          'forecast_category',
          'next_step',
          'competitors',
          'num_decision_makers',
          'deal_description',
          'contract_term_months',
          'renewal_date',
          'mrr',
          'arr',
        ]),
        'id': 'src_hubspot_Deals',
        'label': 'Deals (Hubspot)',
        'parentId': 'sys_hubspot',
        'sourceSystem': 'Hubspot',
        'type': 'source',
      }),
    ]),
    'rag': dict({
      'last_retrieval_count': 13,
      'mappings_retrieved': 13,
      'retrievals': list([
        dict({
          'ontology_entity': 'account.revenue',
          'similarity': 0.897,
          'source_field': 'annual_contract_value',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.probability',
          'similarity': 0.893,
          'source_field': 'probability',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.close_date',
          'similarity': 0.891,
          'source_field': 'close_date',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.stage',
          'similarity': 0.89,
          'source_field': 'deal_stage',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.opportunity_id',
          'similarity': 0.888,
          'source_field': 'deal_id',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'account.created_date',
          'similarity': 0.887,
          'source_field': 'created_date',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.opportunity_name',
          'similarity': 0.886,
          'source_field': 'deal_name',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.amount',
          'similarity': 0.878,
          'source_field': 'amount',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.account_id',
          'similarity': 0.877,
          'source_field': 'company_id',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'account.revenue',
          'similarity': 0.873,
          'source_field': 'mrr',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'account.industry',
          'similarity': 0.872,
          'source_field': 'industry',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'account.account_name',
          'similarity': 0.871,
          'source_field': 'company_name',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'account.revenue',
          'similarity': 0.865,
          'source_field': 'arr',
          'source_system': 'hubspot',
        }),
      ]),
      'total_mappings': 14925,
    }),
    'selected_agents': list([
      'revops_pilot',
    ]),
    'source_mode': 'demo_files',
    'sources_added': list([
      'salesforce',
      'hubspot',
    ]),
    'timeline': list([
      '🔄 DCL state cleared for tenant 759066b4-d840-490d-9001-d3d18014c5da (dev_mode preserved). Ready for new connection.',
    ]),
  })
# ---
